--- a/palu_autoch_sentinelles.Rmd
+++ b/palu_autoch_sentinelles.Rmd
@@ -19,7 +19,11 @@ setnames(mydata,"occurence","palu")
 #Retrieve Malaria autochtone for HTC sites:
 palu_autoch= fread("palu_autoch.csv")
 palu_autoch=palu_autoch[as.Date(deb_sem)>=as.Date("2015-06-01"),]
-
+htc= c("deb_sem","code","abon","ambl","ants","bela",
+        "diri","dona","fito","mand","miad","mnld",
+        "mora","samp","snam","tanb","tomp","tsar",
+        "tsim","velo","vink","vola")
+palu_autoch=palu_autoch[,htc,with=F]
 palu_autoch=as.data.table(gather(palu_autoch,
                                  key=sites,value=autoch,-c(code,deb_sem)))
 #Merge autochtone & Palu (all)
@@ -73,7 +77,7 @@ last6_palu_autoch=palu_autoch[as.Date(deb_sem) %in% semaine,list(deb_sem,sites,a
 
 #transform NA into XX
 last6_palu_autoch$autoch=as.character(last6_palu_autoch$autoch)
-last6_palu_autoch[,autoch:=ifelse(is.na(autoch)==T,"XX",autoch)]
+last6_palu_autoch[,autoch:=ifelse(is.na(autoch)==T,"xx",autoch)]
 last6_palu_autoch[,autoch:=ifelse(nchar(autoch)<2,paste0("0",autoch),autoch)]
 
 
