--- a/ILI_sentinelles.Rmd
+++ b/ILI_sentinelles.Rmd
@@ -13,18 +13,20 @@ source("import1.r");source("preprocessing.R");require(ggplot2); require(gridExtr
 mydata= preprocessing_disease()[["ILI"]]
 
 #aggregate occurence by week:
-mydata[,occurence:=sum(occurence),by="code"]
+mydata$occurence=as.numeric(mydata$occurence)
+mydata[,occurence:=sum(occurence,na.rm = T),by="code"]
+
 mydata$deb_sem=as.Date(mydata$deb_sem)
 mydata[,weeks:=week(deb_sem)]
-d=ggplot(unique(mydata[,list(deb_sem,occurence)]), aes(x=deb_sem, y=occurence),
-         fill=occurence) 
+d=ggplot(unique(mydata[,list(deb_sem,occurence)]), 
+         aes(x=deb_sem, y=occurence), fill=occurence) 
 d= d + geom_bar(stat = "identity",fill="blue") 
 
 d= d + ggtitle(label="ILI dans le réseau sentinelle")
 d= d + xlab("Date") + ylab("Nb. Cas")
  
 debut_annee=as.numeric(unique(mydata[weeks==1,deb_sem]))
-d= d + geom_vline(xintercept = debut_annee,linetype=4,colour="purple")
+d= d + geom_vline(xintercept = debut_annee,linetype=4,colour="orange")
                         
 print(d)
 
@@ -47,15 +49,17 @@ for ( k in 2:6 )
 X=mydata[as.Date(deb_sem) %in% semaine,list(deb_sem,sites,occurence)]
 #transform NA into XX
 X$occurence=as.character(X$occurence)
-X[,occurence:=ifelse(is.na(occurence)==T,"xx",occurence)]
+X[,occurence:=ifelse(is.na(occurence)==T,"na",occurence)]
 X[,occurence:=ifelse(nchar(occurence)<2,paste0("0",occurence),occurence)]
 #inline historical occurence:
 X[,vals:=paste(occurence,collapse = "-"),by="sites"]
 #append latest week per site:
 X[,occurence:=NULL]
-X= merge(unique(X[,list(sites,vals)]), 
-               unique(mydata[as.Date(deb_sem)==max_deb_sem-7,
-                             list(sites,occurence)]),by.x="sites", by.y="sites")
+lastweek=unique(mydata[as.Date(deb_sem)==max_deb_sem-7, list(sites,occurence)])
+lastweek$occurence=as.character(lastweek$occurence)
+lastweek[is.na(occurence)==T,occurence:="na"]                        
+X= merge(unique(X[,list(sites,vals)]),lastweek, by.x="sites", by.y="sites")
+               
                
 X= merge(X,sentinel_latlong[,list(name,sites)],by.x="sites",by.y="sites")
 X[,sites:=NULL]; 
@@ -78,15 +82,14 @@ knitr::kable(X[,c("Sites","6 semaines précédentes","Semaine dernière"),with=F
       X$deb_sem=as.Date(X$deb_sem)
       X[,weeks:=week(deb_sem)]
       setnames(X,"deb_sem","Date")
-      
       d= ggplot(data=X,
                 aes(x=Date,y=occurence)) 
       d=d + geom_line(color='darkblue') 
       debut_annee=as.numeric(unique(X[weeks==1,Date]))
       d= d + geom_vline(xintercept = debut_annee,
-                        linetype=4,colour="purple")
+                        linetype=4,colour="orange")
       d=d + ggtitle(label=paste(myname[p]))
-      d=d + xlab("Date (ligne violette=1er janvier)") + ylab("Nb. Cas")
+      d=d + xlab("Date (ligne verte=1er janvier)") + ylab("Nb. Cas")
       print(d)
     }
 ```
