--- a/PFA_sentinelles.Rmd
+++ b/PFA_sentinelles.Rmd
@@ -6,7 +6,7 @@ output: pdf_document
 ---
 
 ```{r,echo=F, fig.width=10, out.extra='',comment='', message=FALSE , warning=FALSE}
-source("import1.r");source("preprocessing.R");require(ggplot2); require(gridExtra)
+source("import1.R");source("preprocessing.R");require(ggplot2); require(gridExtra)
 #Retrieve PFA for HTC sites
 mydata= preprocessing_disease(select_htc=F)[["PFA"]]
 
